successful r-type selection, added list of 32 registers

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <!--operator-->
 <select name="r-op" id="r-op" data-target="#r-instruction .fncode">
-  <option value="operator" data-target="foo">operator</option>
+  <option value="NONE">operator</option>
 
   <option value="jr" >jr</option>
 
@@ -57,25 +57,119 @@
   <option value="sltu">sltu</option>
 </select>
 
-<select name="r-rd" id="r-rd">
-  <option value="$t0,">$t0,</option>
-  <option value="saab">Saab</option>
-  <option value="mercedes">Mercedes</option>
-  <option value="audi">Audi</option>
+<!--rd-->
+<select name="r-rd" id="r-rd" data-target="#r-instruction .rd">
+  <option value="0">rd</option>
+
+  <option value="0">$zero,</option>
+  <option value="1">$at,</option>
+  <option value="2">$v0,</option>
+  <option value="3">$v1,</option>
+  <option value="4">$a0,</option>
+  <option value="5">$a1,</option>
+  <option value="6">$a2,</option>
+  <option value="7">$a3,</option>
+  <option value="8">$t0,</option>
+  <option value="9">$t1,</option>
+  <option value="10">$t2,</option>
+  <option value="11">$t3,</option>
+  <option value="12">$t4,</option>
+  <option value="13">$t5,</option>
+  <option value="14">$t6,</option>
+  <option value="15">$t7,</option>
+  <option value="16">$s0,</option>
+  <option value="17">$s1,</option>
+  <option value="18">$s2,</option>
+  <option value="19">$s3,</option>
+  <option value="20">$s4,</option>
+  <option value="21">$s5,</option>
+  <option value="22">$s6,</option>
+  <option value="23">$s7,</option>
+  <option value="24">$t8,</option>
+  <option value="25">$t9,</option>
+  <option value="26">$k0,</option>
+  <option value="27">$k1,</option>
+  <option value="28">$gp,</option>
+  <option value="29">$sp,</option>
+  <option value="30">$fp,</option>
+  <option value="31">$ra,</option>
 </select>
-<select name="rs" id="rs">
-  <option value="$t0,">$t0,</option>
-  <option value="saab">Saab</option>
-  <option value="mercedes">Mercedes</option>
-  <option value="audi">Audi</option>
+
+<!--rs-->
+<select name="r-rs" id="r-rs" data-target="#r-instruction .rs">
+  <option value="0">rs</option>
+
+  <option value="0">$zero,</option>
+  <option value="1">$at,</option>
+  <option value="2">$v0,</option>
+  <option value="3">$v1,</option>
+  <option value="4">$a0,</option>
+  <option value="5">$a1,</option>
+  <option value="6">$a2,</option>
+  <option value="7">$a3,</option>
+  <option value="8">$t0,</option>
+  <option value="9">$t1,</option>
+  <option value="10">$t2,</option>
+  <option value="11">$t3,</option>
+  <option value="12">$t4,</option>
+  <option value="13">$t5,</option>
+  <option value="14">$t6,</option>
+  <option value="15">$t7,</option>
+  <option value="16">$s0,</option>
+  <option value="17">$s1,</option>
+  <option value="18">$s2,</option>
+  <option value="19">$s3,</option>
+  <option value="20">$s4,</option>
+  <option value="21">$s5,</option>
+  <option value="22">$s6,</option>
+  <option value="23">$s7,</option>
+  <option value="24">$t8,</option>
+  <option value="25">$t9,</option>
+  <option value="26">$k0,</option>
+  <option value="27">$k1,</option>
+  <option value="28">$gp,</option>
+  <option value="29">$sp,</option>
+  <option value="30">$fp,</option>
+  <option value="31">$ra,</option>
 </select>
-<select name="rt" id="rt">
-  <option value="$t0">$t0</option>
-  <option value="saab">Saab</option>
-  <option value="mercedes">Mercedes</option>
-  <option value="audi">Audi</option>
+
+<!--rt-->
+<select name="r-rt" id="r-rt" data-target="#r-instruction .rt">
+  <option value="0">rt</option>
+
+  <option value="0">$zero,</option>
+  <option value="1">$at,</option>
+  <option value="2">$v0,</option>
+  <option value="3">$v1,</option>
+  <option value="4">$a0,</option>
+  <option value="5">$a1,</option>
+  <option value="6">$a2,</option>
+  <option value="7">$a3,</option>
+  <option value="8">$t0,</option>
+  <option value="9">$t1,</option>
+  <option value="10">$t2,</option>
+  <option value="11">$t3,</option>
+  <option value="12">$t4,</option>
+  <option value="13">$t5,</option>
+  <option value="14">$t6,</option>
+  <option value="15">$t7,</option>
+  <option value="16">$s0,</option>
+  <option value="17">$s1,</option>
+  <option value="18">$s2,</option>
+  <option value="19">$s3,</option>
+  <option value="20">$s4,</option>
+  <option value="21">$s5,</option>
+  <option value="22">$s6,</option>
+  <option value="23">$s7,</option>
+  <option value="24">$t8,</option>
+  <option value="25">$t9,</option>
+  <option value="26">$k0,</option>
+  <option value="27">$k1,</option>
+  <option value="28">$gp,</option>
+  <option value="29">$sp,</option>
+  <option value="30">$fp,</option>
+  <option value="31">$ra,</option>
 </select>
-</div>
 
 <p id="r-instruction">
   <span class="op">000000</span>
